--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-numpy
+numpy<1.24
+wheel
 opencv-python
 pyrender
 pytorch-lightning
 scikit-image
 smplx==0.1.28
 yacs
-chumpy @ git+https://github.com/mattloper/chumpy
 timm
 einops
 xtcocotools
@@ -18,3 +18,8 @@ rich
 webdataset
 gradio
 ultralytics==8.1.34
+torch==2.5.0
+torchvision==0.20.0
+torchaudio==2.5.0
+chumpy
+pyrealsense2
